--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-diamond"></span>
+							<span class="fas fa-atom"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Casabona</h1>
-								<p>Welcome! I am a second year MS student in Physics at the University of Massachusetts Dartmouth. My interests and research are in computational astrophysics, looking at compact binary object mergers.</p>
+								<p>Welcome! I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. My interests and research are in computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<!-- <li><a href="#work">Work</a></li> -->
+								<li><a href="#cv">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -45,9 +45,9 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/london.jpg" alt="" /></span>
+								<p>I earned my Bachelors of Science in Physics at Florida International University. Currently I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. With my adviser Professor Robert Fisher, my research group focuses on Type Ia Supernovae, from detonation models to nucleosynthesis. </p>
+								
 							</article>
 
 						<!-- Work -->
@@ -59,16 +59,23 @@
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+							<article id="cv">
+								<h2 class="major">CV</h2>
+								<span class="image main"><img src="images/cv_casabona.pdf" alt="" /></span>
+								<a href="images/cv_casabona.pdf">CV</a>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<h2> Email </h2>
+                                                                <ul class="alt">
+                                                                                <li>gcasabona@umassd.edu</li>
+                                                                                <li>gcasabona1@gmail.com</li>
+                                                                        </ul>
+
+
+                                                                  <!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -87,12 +94,12 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form> -->
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<li><a href="https://www.facebook.com/gabriel.casabona" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+									<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 								</ul>
 							</article>
 
@@ -154,10 +161,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+										<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+										<li><a href="https://www.facebook.com/gabriel.casabona" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+										<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>  -->
 									</ul>
 
 									<h4>Actions</h4>
