--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Casabona</h1>
-								<p>Welcome! I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. My interests and research are in computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</p>
+								<p><b>Welcome! I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. My interests and research are in computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</b></p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<!-- <li><a href="#work">Work</a></li> -->
+								<li><a href="#publications">Publications</a></li>
 								<li><a href="#cv">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!-- <li><a href="#elements">Elements</a></li> -->
+								<li><a href="#elements">Elements</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -46,16 +46,14 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/london.jpg" alt="" /></span>
-								<p>I earned my Bachelors of Science in Physics at Florida International University. Currently I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. With my adviser Professor Robert Fisher, my research group focuses on Type Ia Supernovae, from detonation models to nucleosynthesis. </p>
+								<p> I earned my Bachelors of Science in Physics at Florida International University. Currently I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. With my adviser Professor Robert Fisher, my research group focuses on Type Ia Supernovae, from detonation models to nucleosynthesis. </p>
 								
 							</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+							<article id="publications">
+								<h2 class="major">Publications</h2>
+                                                                <a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a>								
 							</article>
 
 						<!-- About -->
