--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#publications">Publications</a></li>
+								<li><a href="#intro">Introduction</a></li>
 								<li><a href="#cv">CV</a></li>
+                                                                <li><a href="#publications">Publications</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
