--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Work -->
 							<article id="publications">
 								<h2 class="major">Publications</h2>
-                                                                <a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a>								
+                                                                <p><a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a> (in submission to ApJ)</p>								
 							</article>
 
 						<!-- About -->
