--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<!-- About -->
 							<article id="cv">
 								<h2 class="major">CV</h2>
-								<span class="image main"><img src="images/cv_casabona.pdf" alt="" /></span>
+								<span class="image main"><img src="/home/gabriel/Documents/PHD_APPLICATIONS/CV/cv_casabona.pdf" alt="" /></span>
 								<a href="images/cv_casabona.pdf">CV</a>
 							</article>
 
