--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									</ul>
 								</form> -->
 								<ul class="icons">
-									<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<li><a href="https://twitter.com/casabona_cosmos" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/gabriel.casabona" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 									<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
