--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Casabona</h1>
-								<p><b>Welcome! I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. My interests and research are in computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</b></p>
+								<p><b>Welcome! I am a first year PhD student in Physics at Northwestern University. My interests and research are in theoretical computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</b></p>
 							</div>
 						</div>
 						<nav>
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/london.jpg" alt="" /></span>
-								<p> I earned my Bachelors of Science in Physics at Florida International University. Currently I am a second year Masters of Science student in Physics at the University of Massachusetts Dartmouth. With my adviser Professor Robert Fisher, my research group focuses on Type Ia Supernovae, from detonation models to nucleosynthesis. </p>
+								<p> I earned my Bachelors of Science in Physics at Florida International University. In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Currently, I work in Alexander Tchekhovskoy's group at Northwestern University, where we focus on binary neutron star mergers. </p>
 								
 							</article>
 
@@ -59,7 +59,7 @@
 						<!-- About -->
 							<article id="cv">
 								<h2 class="major">CV</h2>
-								<span class="image main"><img src="/home/gabriel/Documents/PHD_APPLICATIONS/CV/cv_casabona.pdf" alt="" /></span>
+								<span class="image main"><img src="/home/gabriel/Documents/cv/cv_casabona.pdf" alt="" /></span>
 								<a href="images/cv_casabona.pdf">CV</a>
 							</article>
 
@@ -68,7 +68,7 @@
 								<h2 class="major">Contact</h2>
 								<h2> Email </h2>
                                                                 <ul class="alt">
-                                                                                <li>gcasabona@umassd.edu</li>
+                                                                                <li>casabona@u.northwestern.edu</li>
                                                                                 <li>gcasabona1@gmail.com</li>
                                                                         </ul>
 
@@ -94,9 +94,9 @@
 									</ul>
 								</form> -->
 								<ul class="icons">
-									<li><a href="https://twitter.com/casabona_cosmos" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://twitter.com/funky_physics" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/gabriel.casabona" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+									<li><a href="www.https://www.instagram.com/funky_physics/" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 									<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 								</ul>
 							</article>
