--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Casabona</h1>
-								<p><b>Welcome! I am a first year PhD student in Physics at Northwestern University. My interests and research are in theoretical computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</b></p>
+								<p><b>Welcome! I am a third year PhD student in Physics at Northwestern University. My interests and research are in theoretical and computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</b></p>
 							</div>
 						</div>
 						<nav>
@@ -45,15 +45,15 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/london.jpg" alt="" /></span>
-								<p> I earned my Bachelors of Science in Physics at Florida International University. In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Currently, I work in Alexander Tchekhovskoy's group at Northwestern University, where we focus on binary neutron star mergers. </p>
+								<span class="image main"><img src="images/wedding.jpg" alt="" /></span>
+								<p> I earned my Bachelors of Science in Physics at Florida International University. In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Currently, I work in Shane Larson's group at Northwestern University. As a group, we focus on physics related to LISA. Individually, I am working on developing a new relativistic fluid model to better understand neutron stars when they critical density. </p>
 								
 							</article>
 
 						<!-- Work -->
 							<article id="publications">
 								<h2 class="major">Publications</h2>
-                                                                <p><a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a> (in submission to ApJ)</p>								
+                                                                <p><a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a> </p>								
 							</article>
 
 						<!-- About -->
