--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/wedding.jpg" alt="" /></span>
-								<p> I earned my Bachelors of Science in Physics at Florida International University. In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Currently, I work in Shane Larson's group at Northwestern University. As a group, we focus on physics related to LISA. Individually, I am working on developing a new relativistic fluid model to better understand neutron stars when they critical density. </p>
+								<p> I earned my Bachelors of Science in Physics at Florida International University. In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Currently, I work in Shane Larson's group at Northwestern University. As a group, we focus on physics related to LISA. Individually, I am working on developing a new relativistic fluid model to better understand neutron stars when they reach critical density. </p>
 								
 							</article>
 
