--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Casabona</h1>
-								<p><b>Welcome! I am a third year PhD student in Physics at Northwestern University. My interests and research are in theoretical and computational astrophysics, primarily in compact binary object mergers and astrophysical flows.</b></p>
+								<p><b>Welcome! I am recent Physics MS alumni from Northwestern University, where my research interests lied in the domain of theoretical and computational astrophysics, more specifically concentrating on compact binary object mergers and astrophysical flows. As an alum, I am now excited to transition from academia into industry and teaching roles. </b></p>
 							</div>
 						</div>
 						<nav>
@@ -34,7 +34,7 @@
 								<li><a href="#cv">CV</a></li>
                                                                 <li><a href="#publications">Publications</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!-- <li><a href="#elements">Elements</a></li> -->
+								<li><a href="#media">Media</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -46,13 +46,20 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/wedding.jpg" alt="" /></span>
-								<p> I earned my Bachelors of Science in Physics at Florida International University. In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Currently, I work in Shane Larson's group at Northwestern University. As a group, we focus on physics related to LISA. Individually, I am working on developing a new relativistic fluid model to better understand neutron stars when they reach critical density. </p>
+								<p> I earned my Bachelors of Science in Physics at Florida International University in the spring of 2017. While there I was a Resident Assistant for two years, and worked as a tutor. As a member of the Society of Physics, I participated in public outreach as a volunteer tutor and public science fairs. I was also introduced to computational research for the first time in the form of analyzing astronomical data to identify potential three-body stellar systems. For our version of a senior thesis, I focused on the fundamental physics and early developments in nMRI spectroscopy.  
+
+								In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Our publications show a novel turbulently-driven detonation mechanism for electron-degenerate matter composed of combinations of carbon, helium, and oxygen. As a teaching assistant, I taught laboratory and problem-solving technique sessions to students learning Introductory Physics. I also advised on the improvements to future lab sessions, from lesson plans to constructing the new lab room. 
+
+								At Northwestern University, I worked in Shane Larson's group, where we focused on physics related to <a href="https://lisa.nasa.gov/">LISA</a>. Individually, I worked on developing a new relativistic fluid model to better understand neutron stars when they reach critical density. While there, I was funded as a DOE CSGF Fellow through the <a href="https://www.krellinst.org/csgf/">Krell Institute</a>. The fellowship gave me the opportunity to work at Los Alamos National Laboratory, where I focused on code development to solve problems related to general relativistic crustal dynamics of neutron star mergers. With other collaborators based at LANL, I advised on research regarding the statistical comparisons of binary stellar evolution models between a population synthesis codebase, COSMIC, and stellar evolution codebase, MESA.  </p>
 								
 							</article>
 
 						<!-- Work -->
 							<article id="publications">
 								<h2 class="major">Publications</h2>
+                                                                <p><a href="https://arxiv.org/abs/2311.04960 ">Turbulently-Driven Detonation Initiation in Electron-Degenerate Matter with Helium</a> </p>								
+								
+                                                                <p><a href="https://arxiv.org/abs/2305.13328">Understanding Binary Systems -- a Comparison between COSMIC and MESA</a> </p>								
                                                                 <p><a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a> </p>								
 							</article>
 
@@ -96,8 +103,8 @@
 								<ul class="icons">
 									<li><a href="https://twitter.com/funky_physics" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/gabriel.casabona" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="www.https://www.instagram.com/funky_physics/" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
-									<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
+									<li><a href="www.https://www.instagram.com/funky_physics/" class="icon fa-instagram"><span class="label">Instagram</span></a></li> 
+									<li><a href="https://github.com/gcasabona/" class="icon fa-github"><span class="label">GitHub</span></a></li> 
 								</ul>
 							</article>
 
