updated cv, experimenting with elements

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                                                                 <li><a href="#publications">Publications</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#media">Media</a></li>
+								<li><a href="#elements">Elements</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -46,11 +47,11 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/wedding.jpg" alt="" /></span>
-								<p> I earned my Bachelors of Science in Physics at Florida International University in the spring of 2017. While there I was a Resident Assistant for two years, and worked as a tutor. As a member of the Society of Physics, I participated in public outreach as a volunteer tutor and public science fairs. I was also introduced to computational research for the first time in the form of analyzing astronomical data to identify potential three-body stellar systems. For our version of a senior thesis, I focused on the fundamental physics and early developments in nMRI spectroscopy.  
+								<p> I earned my Bachelors of Science in Physics at Florida International University in the spring of 2017. While there I was a Resident Assistant for two years, and worked as a tutor. As a member of the Society of Physics, I participated in public outreach as a volunteer tutor and public science fairs. I was also introduced to computational research for the first time in the form of analyzing astronomical data to identify potential three-body stellar systems. For our version of a senior thesis, I focused on the fundamental physics and early developments in nMRI spectroscopy. <p> 
 
-								In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Our publications show a novel turbulently-driven detonation mechanism for electron-degenerate matter composed of combinations of carbon, helium, and oxygen. As a teaching assistant, I taught laboratory and problem-solving technique sessions to students learning Introductory Physics. I also advised on the improvements to future lab sessions, from lesson plans to constructing the new lab room. 
+								<p> In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Our publications show a novel turbulently-driven detonation mechanism for electron-degenerate matter composed of combinations of carbon, helium, and oxygen. As a teaching assistant, I taught laboratory and problem-solving technique sessions to students learning Introductory Physics. I also advised on the improvements to future lab sessions, from lesson plans to constructing the new lab room. <p> 
 
-								At Northwestern University, I worked in Shane Larson's group, where we focused on physics related to <a href="https://lisa.nasa.gov/">LISA</a>. Individually, I worked on developing a new relativistic fluid model to better understand neutron stars when they reach critical density. While there, I was funded as a DOE CSGF Fellow through the <a href="https://www.krellinst.org/csgf/">Krell Institute</a>. The fellowship gave me the opportunity to work at Los Alamos National Laboratory, where I focused on code development to solve problems related to general relativistic crustal dynamics of neutron star mergers. With other collaborators based at LANL, I advised on research regarding the statistical comparisons of binary stellar evolution models between a population synthesis codebase, COSMIC, and stellar evolution codebase, MESA.  </p>
+								<p> At Northwestern University, I worked in Shane Larson's group, where we focused on physics related to <a href="https://lisa.nasa.gov/">LISA</a>. Individually, I worked on developing a new relativistic fluid model to better understand neutron stars when they reach critical density. While there, I was funded as a DOE CSGF Fellow through the <a href="https://www.krellinst.org/csgf/">Krell Institute</a>. The fellowship gave me the opportunity to work at Los Alamos National Laboratory, where I focused on code development to solve problems related to general relativistic crustal dynamics of neutron star mergers. With other collaborators based at LANL, I advised on research regarding the statistical comparisons of binary stellar evolution models between a population synthesis codebase, COSMIC, and stellar evolution codebase, MESA.  </p>
 								
 							</article>
 
@@ -66,7 +67,7 @@
 						<!-- About -->
 							<article id="cv">
 								<h2 class="major">CV</h2>
-								<span class="image main"><img src="/home/gabriel/Documents/cv/cv_casabona.pdf" alt="" /></span>
+								<span class="image main"><img src="/home/gabriel/cv/cv_casabona.pdf" alt="" /></span>
 								<a href="images/cv_casabona.pdf">CV</a>
 							</article>
 
@@ -99,12 +100,13 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form> -->
+								</form> 
 								<ul class="icons">
 									<li><a href="https://twitter.com/funky_physics" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/gabriel.casabona" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="www.https://www.instagram.com/funky_physics/" class="icon fa-instagram"><span class="label">Instagram</span></a></li> 
-									<li><a href="https://github.com/gcasabona/" class="icon fa-github"><span class="label">GitHub</span></a></li> 
+									<li><a href="https://www.instagram.com/funky_physics/" class="icon fa-instagram"><span class="label">Instagram</span></a></li> 
+									<li><a href="https://github.com/gcasabona/" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									 <li><a href="https://www.linkedin.com/in/gabriel-casabona-47956b1a4/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
 
