--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                                                                 <li>casabona@u.northwestern.edu</li>
                                                                                 <li>gcasabona1@gmail.com</li>
                                                                         </ul>
-
+							</article>
 
                                                                   <!-- <form method="post" action="#">
 									<div class="fields">
