accidentally deleted everything, trying to fix

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section>
 
 							</article>
-
+						</div>
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
@@ -323,7 +323,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                                                                                 <li>gcasabona1@gmail.com</li>
                                                                         </ul>
 							</article>
-
+                                        </div>    
 
 				<!-- Footer -->
 					<footer id="footer">
