fixing contact section and main page contact info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Casabona</h1>
-								<p><b>Welcome! I am recent Physics MS alumni from Northwestern University, where my research interests lied in the domain of theoretical and computational astrophysics, more specifically concentrating on compact binary object mergers and astrophysical flows. As an alum, I am now excited to transition from academia into industry and teaching roles. </b></p>
+								<p><b>Welcome! I am a recent Physics MS alum from Northwestern University, where my research interests lied in the domain of theoretical and computational astrophysics, more specifically concentrating on compact binary object mergers and astrophysical flows. As an alum, I am now excited to transition from academia into industry and teaching roles. </b></p>
 							</div>
 						</div>
 						<nav>
@@ -323,8 +323,33 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                                                                                 <li>gcasabona1@gmail.com</li>
                                                                         </ul>
 							</article>
-                                        </div>    
-
+			</div>    
+ <form method="post" action="#">
+                                                                        <div class="fields">                                                                                                                                                                                <div class="field half">
+                                                                                        <label for="name">Name</label>
+                                                                                        <input type="text" name="name" id="name" />
+                                                                                </div>
+                                                                                <div class="field half">
+                                                                                        <label for="email">Email</label>
+                                                                                        <input type="text" name="email" id="email" />
+                                                                                </div>
+                                                                                <div class="field">
+                                                                                        <label for="message">Message</label>
+                                                                                        <textarea name="message" id="message" rows="4"></textarea>
+                                                                                </div>
+                                                                        </div>
+                                                                        <ul class="actions">
+                                                                                <li><input type="submit" value="Send Message" class="primary" /></li>
+                                                                                <li><input type="reset" value="Reset" /></li>
+                                                                        </ul>
+                                                                </form>
+                                                                <ul class="icons">
+                                                                        <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                                                                        <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                                                                        <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                                                                        <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                                                                </ul>
+                                                        </article>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
