--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 								<li><a href="#intro">Introduction</a></li>
 								<li><a href="#cv">CV</a></li>
                                                                 <li><a href="#publications">Publications</a></li>
-								<li><a href="#contact">Contact</a></li>
 								<li><a href="#media">Media</a></li>
 								<!---	<li><a href="#elements">Elements</a></li> --->
+								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -315,7 +315,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</article>
 						</div>
 						<!-- Contact -->
-							<article id="contact">
+							<!--- <article id="contact">
 								<h2 class="major">Contact</h2>
 								<h2> Email </h2>
                                                                 <ul class="alt">
@@ -323,8 +323,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                                                                                 <li>gcasabona1@gmail.com</li>
                                                                         </ul>
 							</article>
-			</div>    
- <form method="post" action="#">
+			</div>    ---> 				
+							<article id="contact">
+								<h2 class="major">Contact</h2>
+								<form method="post" action="#">
                                                                         <div class="fields">                                                                                                                                                                                <div class="field half">
                                                                                         <label for="name">Name</label>
                                                                                         <input type="text" name="name" id="name" />
