--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
-                                                                        <div class="fields">                                                                                                                                                                                <div class="field half">
+                                                                        <div class="fields">
+										<div class="field half">
                                                                                         <label for="name">Name</label>
                                                                                         <input type="text" name="name" id="name" />
                                                                                 </div>
