--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Gabriel Casabona</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,16 +24,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Gabriel Casabona</h1>
+								<p>Welcome! I am a recent Physics MS alum from Northwestern University, where my research interests lied in the domain of theoretical and computational astrophysics, more specifically concentrating on compact binary object mergers and astrophysical flows. As an alum, I am now excited to transition from academia into industry and teaching roles.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#cv">CV</a></li>
+								<li><a href="#publications">Publications</a></li>
+								<li><a href="#media">Media</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -47,54 +47,27 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+							<p> I earned my Bachelors of Science in Physics at Florida International University in the spring of 2017. While there I was a Resident Assistant for two years, and worked as a tutor. As a member of the Society of Physics, I participated in public outreach as a volunteer tutor and public science fairs. I was also introduced to computational research for the first time in the form of analyzing astronomical data to identify potential three-body stellar systems. For our version of a senior thesis, I focused on the fundamental physics and early developments in nMRI spectroscopy. <p>
+
+                                                                <p> In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Our publications show a novel turbulently-driven detonation mechanism for electron-degenerate matter composed of combinations of carbon, helium, and oxygen. As a teaching assistant, I taught laboratory and problem-solving technique sessions to students learning Introductory Physics. I also advised on the improvements to future lab sessions, from lesson plans to constructing the new lab room. <p>
+                                                                                                                                                                                                                             <p> At Northwestern University, I worked in Shane Larson's group, where we focused on physics related to <a href="https://lisa.nasa.gov/">LISA</a>. Individually, I worked on developing a new relativistic fluid model to better understand neutron stars when they reach critical density. While there, I was funded as a DOE CSGF Fellow through the <a href="https://www.krellinst.org/csgf/">Krell Institute</a>. The fellowship gave me the opportunity to work at Los Alamos National Laboratory, where I focused on code development to solve problems related to general relativistic crustal dynamics of neutron star mergers. With other collaborators based at LANL, I advised on research regarding the statistical comparisons of binary stellar evolution models between a population synthesis codebase, COSMIC, and stellar evolution codebase, MESA.  </p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+						<!-- CV -->
+							<article id="cv">
+								<h2 class="major">CV</h2>
+								<span class="image main"><img src="/home/gabriel/cv/cv_casabona.pdf" alt="" /></span>
+                                                                <a href="images/cv_casabona.pdf">CV</a>
 							</article>
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+						<!-- Publications -->
+							<article id="publications">
+								<h2 class="major">Publications</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
+							<p><a href="https://arxiv.org/abs/2311.04960 ">Turbulently-Driven Detonation Initiation in Electron-Degenerate Matter with Helium</a> </p>
 
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+                                                                <p><a href="https://arxiv.org/abs/2305.13328">Understanding Binary Systems -- a Comparison between COSMIC and MESA</a> </p>
+                                                                <p><a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a> </p>
 							</article>
 
 						<!-- Elements -->
@@ -340,6 +313,37 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</article>
 
 					</div>
+
+						<!-- Contact -->
+							<article id="contact">
+								<h2 class="major">Contact</h2>
+								<form method="post" action="#">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="4"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Reset" /></li>
+									</ul>
+								</form>
+								<ul class="icons">
+									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</article>
 
 				<!-- Footer -->
 					<footer id="footer">
