fix pub section 2

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                                                                 <p><a href="https://arxiv.org/abs/1807.03786">Carbon Detonation Initiation in Turbulent Electron-Degenerate Matter</a> </p>
 							</article>
 
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
+						<!-- Media -->
+							<article id="media">
+								<h2 class="major">Media</h2>
 
 								<section>
 									<h3 class="major">Text</h3>
@@ -311,7 +311,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 							</article>
 
-					</div>
 
 						<!-- Contact -->
 							<article id="contact">
