--- a/index.html
+++ b/index.html
@@ -76,31 +76,10 @@
 
 								<section>
 
-									<!DOCTYPE html> 
-										<html lang="en"> 
 
-										<head> 
-											<meta charset="UTF-8"> 
-											<meta name="viewport"
-												content="width=device-width, initial-scale=1.0"> 
-											<title>Adding Youtube Video</title> 
-										</head> 
+									<iframe height="480" width="500" src="https://www.youtube.com/embed/8DwLVEUvpt0"></iframe> 
 
-										<body> 
-
-											<iframe height="480" width="500"
-													src="https://www.youtube.com/embed/8DwLVEUvpt0"> 
-											</iframe> 
-
-										</body> 
-
-										</html>
-
-
-
-
-
-									<section>
+								<section>
 							</article>
 
 
