--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 								<section>
 
 
-									<iframe height="480" width="500" src="https://www.youtube.com/embed/8DwLVEUvpt0"
-										frameborder="0" allowfullscreen width="100%" height="auto"></iframe> 
+									<iframe height="480" width="500" src="https://www.youtube.com/embed/8DwLVEUvpt0" frameborder="0" allowfullscreen width="100%" height="auto"></iframe> 
 
 								<section>
 							</article>
