modified video size after adding css info

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<h2 class="major">Media</h2>
 
 
-								<section>
+								<section class="video-container">
 
 
 									<iframe height="480" width="500" src="https://www.youtube.com/embed/8DwLVEUvpt0" frameborder="0" allowfullscreen width="100%" height="auto"></iframe> 
