--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
 									<iframe height="480" width="500" src="https://www.youtube.com/embed/8DwLVEUvpt0" frameborder="0" allowfullscreen width="100%" height="auto"></iframe> 
 
 								<section>
+								<div class="video-description">
+        								<h3>BINARY NEUTRON STAR MERGERS</h3>
+									<p>In 2020, I had the pleasure of being interviewd by <a href="https://suzettelyn.com/">Suzette Lyn</a>, social media personality out of Denmark. We talked about the research I was involved in at the time, revolving around the nuclear physics of binary neutron star mergers.</p>
+    								</div>	
 							</article>
 
 
