fixing video caption

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
 								</section>
 								<div class="video-description">
-        								<h3>BINARY NEUTRON STAR MERGERS</h3>
-									<p>In 2020, I had the pleasure of being interviewd by <a href="https://suzettelyn.com/">Suzette Lyn</a>, social media personality out of Denmark. We talked about the research I was involved in at the time, revolving around the nuclear physics of binary neutron star mergers.</p>
+									<h4>BINARY NEUTRON STAR MERGERS</h4>
+									<blockquote>In 2020, I had the pleasure of being interviewd by <a href="https://suzettelyn.com/">Suzette Lyn</a>, social media personality out of Denmark. We talked about the research I was involved in at the time, revolving around the nuclear physics of binary neutron star mergers.</blockquote>
     								</div>	
 							</article>
 
