added more videos

--- a/index.html
+++ b/index.html
@@ -82,7 +82,22 @@
 								</section>
 									<h4>BINARY NEUTRON STAR MERGERS</h4>
 									<blockquote>In 2020, I had the pleasure of being interviewd by <a href="https://suzettelyn.com/">Suzette Lyn</a>, social media personality out of Denmark. We talked about the research I was involved in at the time, revolving around the nuclear physics of binary neutron star mergers.</blockquote>
-    								</div>	
+								<section class="video-container">
+
+
+									<iframe src="https://www.youtube.com/embed/9eldnnlyt50" allowfullscreen width="100%" height="auto"></iframe> 
+
+								</section>
+									<h4>DOE CSGF 2023: Numerical Frontier in Binary Compact Object Mergers</h4>
+									<blockquote>At the conclusion of my fellowship with <a href="https://www.krellinst.org/csgf/">Krell Institute</a>, I presented my research over the course of my graduate career. Topics ranged from my time working on type Ia supernovae, to accretion disk phenomona. </blockquote>
+								<section class="video-container">
+
+
+									<iframe src="https://www.youtube.com/embed/ZeuGnCJQHVU" allowfullscreen width="100%" height="auto"></iframe> 
+
+								</section>
+									<h4>It All Comes Down to Gravity</h4>
+									<blockquote>While attending <a href="https://sc22.supercomputing.org/">SC22</a>, I sat down with <a href="https://sarahannewebb.com/">Dr. Sarah Webb</a>, host of the  <a href="https://scienceinparallel.org/">Science in Parallel</a> podcast, where we spoke about science, the graduate school experience, and how I navigated through life living in Chicago during the pandemic. </blockquote>
 							</article>
 
 
