--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<li><a href="#publications">Publications</a></li>
 								<li><a href="#media">Media</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Elements</a></li>
+								<!--	<li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
 					</header>
