commented out elements section, fixed blocking

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 								</section>
 									<h4>BINARY NEUTRON STAR MERGERS</h4>
-									<blockquote>In 2020, I had the pleasure of being interviewd by <a href="https://suzettelyn.com/">Suzette Lyn</a>, social media personality out of Denmark. We talked about the research I was involved in at the time, revolving around the nuclear physics of binary neutron star mergers.</blockquote>
+									<blockquote>In 2020, I had the pleasure of being interviewd by <a href="https://suzettelyn.com/">Suzette Lyn</a>, social media personality based in Denmark. We talked about the research I was involved in at the time, revolving around the nuclear physics of binary neutron star mergers.</blockquote>
 								<section class="video-container">
 
 
@@ -89,7 +89,7 @@
 
 								</section>
 									<h4>DOE CSGF 2023: Numerical Frontier in Binary Compact Object Mergers</h4>
-									<blockquote>At the conclusion of my fellowship with <a href="https://www.krellinst.org/csgf/">Krell Institute</a>, I presented my research over the course of my graduate career. Topics ranged from my time working on type Ia supernovae, to accretion disk phenomona. </blockquote>
+									<blockquote>At the conclusion of my fellowship with the <a href="https://www.krellinst.org/csgf/">Krell Institute</a>, I presented my research over the course of my graduate career. Topics ranged from my time working on type Ia supernovae, to accretion disk phenomona. </blockquote>
 								<section class="video-container">
 
 
@@ -233,9 +233,72 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 													<td>Vis ac commodo adipiscing arcu aliquet.</td>
 													<td>19.99</td>
 												</tr>
-												<tr> <td>Item Three</td>                                                                                                                                          <td> Morbi faucibus arcu accumsan lorem.</td>                                                                                                                <td>29.99</td>                                                                                                                                       </tr>                                                                                                                                                        <tr>                                                                                                                                                                 <td>Item Four</td>                                                                                                                                           <td>Vitae integer tempus condimentum.</td>                                                                                                                   <td>19.99</td>                                                                                                                                       </tr>                                                                                                                                                        <tr>                                                                                                                                                                 <td>Item Five</td>                                                                                                                                           <td>Ante turpis integer aliquet porttitor.</td>                                                                                                              <td>29.99</td>                                                                                                                                       </tr>                                                                                                                                                </tbody>                                                                                                                                                     <tfoot>                                                                                                                                                              <tr>                                                                                                                                                                 <td colspan="2"></td>
-													 <td>100.00</td>
+												<tr> 
+													<td>Item Three</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>                                                                                                                                       
+												</tr>
+												<tr>
+													<td>Item Four</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Five</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+											</tbody>
+											<tfoot>
+												<tr>
+													<td colspan="2"></td>
+													<td>100.00</td>
                                                                                                 </tr>
+                                                                                        </tfoot>
+                                                                                </table>
+                                                                        </div>
+									 <h4>Alternate</h4>
+                                                                        <div class="table-wrapper">
+                                                                                <table class="alt">
+                                                                                        <thead>
+                                                                                                <tr>
+                                                                                                        <th>Name</th>
+                                                                                                        <th>Description</th>
+                                                                                                        <th>Price</th>
+                                                                                                </tr>
+                                                                                        </thead>
+                                                                                        <tbody>
+                                                                                                <tr>
+                                                                                                        <td>Item One</td>
+                                                                                                        <td>Ante turpis integer aliquet porttitor.</td>
+                                                                                                        <td>29.99</td>
+                                                                                                </tr>
+                                                                                                <tr>
+                                                                                                        <td>Item Two</td>
+                                                                                                        <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                                                                                                        <td>19.99</td>
+                                                                                                </tr>
+                                                                                                <tr>
+                                                                                                        <td>Item Three</td>
+                                                                                                        <td> Morbi faucibus arcu accumsan lorem.</td>
+                                                                                                        <td>29.99</td>
+                                                                                                </tr>
+                                                                                                <tr>
+                                                                                                        <td>Item Four</td>
+                                                                                                        <td>Vitae integer tempus condimentum.</td>
+                                                                                                        <td>19.99</td>
+                                                                                                </tr>
+                                                                                                <tr>
+                                                                                                        <td>Item Five</td>
+                                                                                                        <td>Ante turpis integer aliquet porttitor.</td>
+                                                                                                        <td>29.99</td>
+                                                                                                </tr>
+                                                                                        </tbody>
+                                                                                        <tfoot>
+                                                                                                <tr>
+                                                                                                        <td colspan="2"></td>
+                                                                                                        <td>100.00</td>
+												</tr>
                                                                                         </tfoot>
                                                                                 </table>
                                                                         </div>
@@ -307,7 +370,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                                                                                         <li><input type="submit" value="Send Message" class="primary" /></li>
                                                                                         <li><input type="reset" value="Reset" /></li>
                                                                                 </ul>
-                                                                        </form> </section>
+                                                                        </form> 
+								</section>
 
                                                         </article>
 
