commented out elements section, fixed blocking

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
+			</div>
 
 
 
@@ -373,6 +374,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section>
 
                                                         </article>
+                                        </div>
 
 				<!-- Footer -->
 					<footer id="footer">
