--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/gabriel-casabona-47956b1a4/" class="icon fa-linkedin"><span class="label">LinkedIN</span></a></li>
+									<li><a href="https://github.com/gcasabona/" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
