--- a/index.html
+++ b/index.html
@@ -105,25 +105,10 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<ul class="alt">
+                                                                                <li>casabona@u.northwestern.edu</li>
+                                                                                <li>gcasabona1@gmail.com</li>
+                                                                        </ul>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/gabriel-casabona-47956b1a4/" class="icon fa-linkedin"><span class="label">LinkedIN</span></a></li>
 									<li><a href="https://github.com/gcasabona/" class="icon fa-github"><span class="label">GitHub</span></a></li>
