--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<h2> Email </h2>
 								<ul class="alt">
                                                                                 <li>casabona@u.northwestern.edu</li>
                                                                                 <li>gcasabona1@gmail.com</li>
