--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/csgf.jpg" alt="" /></span>
+								<span class="image main"><img src="/home/gabriel/Website/gcasabona.github.io/images/csgf.jpg" alt="" /></span>
 							<p> I earned my Bachelors of Science in Physics at Florida International University in the spring of 2017. While there I was a Resident Assistant for two years, and worked as a tutor. As a member of the Society of Physics, I participated in public outreach as a volunteer tutor and public science fairs. I was also introduced to computational research for the first time in the form of analyzing astronomical data to identify potential three-body stellar systems. For our version of a senior thesis, I focused on the fundamental physics and early developments in nMRI spectroscopy. <p>
 
                                                                 <p> In the spring of 2019, I completed my Masters of Science in Physics at the University of Massachusetts Dartmouth. With my MS thesis adviser Professor Robert Fisher, my research group focused on Type Ia Supernovae, from detonation models to nucleosynthesis. Our publications show a novel turbulently-driven detonation mechanism for electron-degenerate matter composed of combinations of carbon, helium, and oxygen. As a teaching assistant, I taught laboratory and problem-solving technique sessions to students learning Introductory Physics. I also advised on the improvements to future lab sessions, from lesson plans to constructing the new lab room. <p>
