--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<!-- CV -->
 							<article id="cv">
 								<h2 class="major">CV</h2>
-								<span class="image main"><img src="images/cv_casabona.pdf" alt="cv" /></span>
+								<span class="image main"><img src="images/cv_casabona.pdf" alt="" /></span>
                                                                 <a href="images/cv_casabona.pdf">CV</a>
 							</article>
 
