--- a/index.html
+++ b/index.html
@@ -59,12 +59,8 @@
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<span class="image main">
-									<img src="images/cv_casabona.pdf" alt="" />
-                                                                <a href="images/cv_casabona.pdf" target="_blank">View CV (PDF)</a>
-								</span>
 								<p>
-        								<!-- Another download link for better user experience -->
-        								<a href="images/cv_casabona.pdf" download>Download CV (PDF)</a>
+        								<a href="images/casabona_cv.pdf" download>Download CV (PDF)</a>
     								</p>
 							</article>
 
