--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
 						<!-- CV -->
 							<article id="cv">
 								<h2 class="major">CV</h2>
-								<span class="image main">
-								<p>
-        								<a href="images/casabona_cv.pdf" download>Download CV (PDF)</a>
-    								</p>
+								<span class="image main"><a href="images/casabona_cv.pdf" download>CV (PDF)</a>
+								</span>
 							</article>
 
 						<!-- Publications -->
